--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
-    <head>
+    <head><link rel="stylesheet href ="css/style.css">
 <title>pranay</title>
 <body>
 
-   </body><h1>confort</h1>
+   </body><h1></h1>
 </body>
 </html>
