--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         <div class="container clearfix" style="margin-top: 50px">                       
             <img class="profile-image img-fluid float-left" src="assets/images/profile.jpg" alt="James Lee" />
             <div class="profile-content float-left">
-                <h1 class="name">Khushal Rathod</h1>;
+                <h1 class="name">Pranay Shukla</h1>;
                 <h2 class="desc">Java Developer</h2>   
                 <ul class="social list-inline" style="list-style-type: none;margin: 0px;padding: 0px;">
                                      
@@ -139,7 +139,7 @@
                     <div class="section-inner">
                         <h2 class="heading">About Me</h2>
                         <div class="content">
-                            <p>Hi there, I am Khushal, a final year Information Technology student, currently interning at Cognizant Technology Solutions Pvt. Ltd. with experience in C, Java, Web Development.
+                            <p>Hi there, I am Pranay, a final year Information Technology student, currently interning at Cognizant Technology Solutions Pvt. Ltd. with experience in C, Java, Web Development.
 </p>
                          
                         </div><!--//content-->
