--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 
      <header id="home" class="header">
         <div class="container clearfix" style="margin-top: 50px">                       
-            <img class="profile-image img-fluid float-left" src="assets/images/profile.jpg" alt="James Lee" />
+            <img class="profile-image img-fluid float-left" src="assets/images/.profile.jpg" alt="James Lee" />
             <div class="profile-content float-left">
                 <h1 class="name">Pranay Shukla</h1>;
                 <h2 class="desc">Java Developer</h2>   
