--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
             <img class="profile-image img-fluid float-left" src="assets/images/.profile.jpg" alt="James Lee" />
             <div class="profile-content float-left">
                 <h1 class="name">Pranay Shukla</h1>;
-                <h2 class="desc">Java Developer</h2>   
+                <h2 class="desc">Intern at Cognizant</h2>   
                 <ul class="social list-inline" style="list-style-type: none;margin: 0px;padding: 0px;">
                                      
                     <li class="list-inline-item"><a href="#"><i class="fab fa-google-plus-g"></i></a></li>
@@ -215,17 +215,17 @@
                             <div class="item">                      
                                 <h3 class="title"><i class="fas fa-graduation-cap"></i> B.Tech Information Technology</h3>
                                 <h4 class="university">Govt. College of Engineering, Amravati <span class="year">(2015-19)</span></h4>
-                                <h4 class="university">CGPA<span class="year">7.71</span></h4>
+                                <h4 class="university">CGPA<span class="year">7.13</span></h4>
                             </div><!--//item-->
                             <div class="item">
                                 <h3 class="title"><i class="fas fa-graduation-cap"></i> Higher Secondary Education</h3>
-                                <h4 class="university">VMV College, Amravati <span class="year">(2013-2015)</span></h4>
-                                <h4 class="university">Percentage<span class="year">79.38</span></h4>
+                                <h4 class="university">G.B.M.M High School <span class="year">(2013-2015)</span></h4>
+                                <h4 class="university">Percentage<span class="year">83.85</span></h4>
                             </div><!--//item-->
                             <div class="item">
                                 <h3 class="title"><i class="fas fa-graduation-cap"></i> Secondary Education</h3>
-                                <h4 class="university">Kanifnath Maharaj Vidyalaya Sawargaon <span class="year">(2012-2013)</span></h4>
-                                <h4 class="university">Percentage<span class="year">88.73</span></h4>
+                                <h4 class="university">Ratna Vidya Niketan Bansilal Katariya High School <span class="year">(2012-2013)</span></h4>
+                                <h4 class="university">Percentage<span class="year">83.82</span></h4>
                             </div><!--//item-->
                         </div><!--//content-->
                     </div><!--//section-inner-->
@@ -245,8 +245,8 @@
                         <div class="content">
                             <div class="item">                      
                                 <h3 class="title"><i class="fa fa-envelope" aria-hidden="true"></i>  E-mail</h3>
-                                <h4 class="university"><p><a href="mailto:Khushal.Rathod@cognizant.com">Khushal.Rathod@cognizant.com</a></p><span class="year"></span></h4>
-                                <h4 class="university"><p><a href="mailto:rathodkhushal80@gmail.com">rathodkhushal80@gmail.com</a></p><span class="year"></span></h4>
+                                <h4 class="university"><p><a href="mailto:Pranayrajnarayan.shukla@cognizant.com">Pranayrajnarayan.shukla@cognizant.com</a></p><span class="year"></span></h4>
+                                <h4 class="university"><p><a href="mailto:shuklapranay3@gmail.com">shuklapranay3@gmail.com</a></p><span class="year"></span></h4>
                             </div><!--//item-->
                             <div class="item">
                                 <h3 class="title"><i class="fa fa-mobile" aria-hidden="true"></i>  Mobile</h3>
