--- a/index.html
+++ b/index.html
@@ -152,11 +152,11 @@
                         <div class="content">    
                                                
                             <div class="item featured text-center">
-                                <h3 class="title">FarmersFriend</a></h3>
-                                <p class="summary">A Web Application Interface for Farmers</p>
+                                <h3 class="title">E-Suggestion Box</a></h3>
+                                <p class="summary">An Application Interface for college Authorities.</p>
                                 <div class="featured-image has-ribbon">
                                     <a href="https://themes.3rdwavemedia.com/bootstrap-templates/startup/velocity-bootstrap-theme-for-startup-products/" target="_blank">
-                                    <img class="img-fluid project-image" src="assets/images/projects/project-featured.png" alt="project name" />
+                                    <img class="img-fluid project-image" src="assets/images/projects/.project-featured.png" alt="project name" />
                                     </a>
                                     <div class="ribbon">
                                         <div class="text">New</div>
@@ -164,13 +164,14 @@
                                 </div>
                                     
                                 <div class="desc text-left">                                    
-                                    <p>It suggest online platform for Farmers and Dealers to interact with each other and general information regarding agriculture. In this project we made online platform using web technology, provide authenticate Username and password for login to homepage of site and upload the information of Product of their. This project was all about to remove third party from Farmers market.</p>
-                                </div><!--//desc-->         
+                                    <p>This is a online application developed with an intension of having all suggestions and complaints regarding college premises and any kind of improvement needed
+					    in a mentor manner where higher faculty members will be able to log on to the system to look upon that issue correctly.
+				</div><!--//desc-->         
                             </div><!--//item-->
                             <hr class="divider" />
                             <div class="item row">
                                 <a class="col-md-4 col-12" href="https://themes.3rdwavemedia.com/bootstrap-templates/resume/instance-bootstrap-portfolio-theme-for-developers/" target="_blank">
-                                <img class="img-fluid project-image" src="assets/images/projects/project-1.png" alt="project name" />
+                                <img class="img-fluid project-image" src="assets/images/projects/.project-1.png" alt="project name" />
                                 </a>
                                 <div class="desc col-md-8 col-12">
                                     <h3 class="title">e-Alpha School an e-learning Platform for School Children</h3>
