--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                                     
                                 <div class="desc text-left">                                    
                                     <p>This is a online application developed with an intension of having all suggestions and complaints regarding college premises and any kind of improvement needed
-					    in a mentor manner where higher faculty members will be able to log on to the system to look upon that issue correctly.
+					    in a mentor manner where higher faculty members will be able to log on to the system to look upon that issue correctly.</p>
 				</div><!--//desc-->         
                             </div><!--//item-->
                             <hr class="divider" />
