--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         <div class="container clearfix" style="margin-top: 45px">                       
             <img class="profile-image img-fluid float-left" src="assets/images/projects/pranay.jpg" alt="James Lee" height="200" width="350" />
             <div class="profile-content float-left">
-                <h1 class="name">Pranay Shukla</h1>;
+                <h1 class="name">Pranay Shukla</h1>
                 <h2 class="desc">Intern at Cognizant</h2>   
                 <ul class="social list-inline" style="list-style-type: none;margin: 0px;padding: 0px;">
                                      
