--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                                 <p class="summary">An Application Interface for college Authorities.</p>
                                 <div class="featured-image has-ribbon">
                                     <a href="https://themes.3rdwavemedia.com/bootstrap-templates/startup/velocity-bootstrap-theme-for-startup-products/" target="_blank">
-                                    <img class="img-fluid project-image" src="assets/images/projects/.project-featured.png" alt="project name" />
+                                  <!--  <img class="img-fluid project-image" src="assets/images/projects/.project-featured.png" alt="project name" />-->
                                     </a>
                                     <div class="ribbon">
                                         <div class="text">New</div>
@@ -170,9 +170,9 @@
                             </div><!--//item-->
                             <hr class="divider" />
                             <div class="item row">
-                                <a class="col-md-4 col-12" href="https://themes.3rdwavemedia.com/bootstrap-templates/resume/instance-bootstrap-portfolio-theme-for-developers/" target="_blank">
+                            <!--    <a class="col-md-4 col-12" href="https://themes.3rdwavemedia.com/bootstrap-templates/resume/instance-bootstrap-portfolio-theme-for-developers/" target="_blank">
                                 <img class="img-fluid project-image" src="assets/images/projects/.project-1.png" alt="project name" />
-                                </a>
+                                </a>-->
                                 <div class="desc col-md-8 col-12">
                                     <h3 class="title">e-Alpha School an e-learning Platform for School Children</h3>
                                     <p class="mb-2">The aim of this project is to develop an e-learning system that will improve Student's Reading skills along with Logical and Analytical skills. We realized Students' inability to grasp key ideas and concepts while reading by conventional way. The Students will enjoy learning from this system and they will develop their interest in learning. To inculcate the problem-solving attitude and getting out from a tricky situation.</p>
