--- a/index.html
+++ b/index.html
@@ -155,9 +155,9 @@
                                 <h3 class="title">E-Suggestion Box</a></h3>
                                 <p class="summary">An Application Interface for college Authorities.</p>
                                 <div class="featured-image has-ribbon">
-                                    <a href="https://themes.3rdwavemedia.com/bootstrap-templates/startup/velocity-bootstrap-theme-for-startup-products/" target="_blank">
-                                  <!--  <img class="img-fluid project-image" src="assets/images/projects/.project-featured.png" alt="project name" />-->
-                                    </a>
+                                  <!--  <a href="https://themes.3rdwavemedia.com/bootstrap-templates/startup/velocity-bootstrap-theme-for-startup-products/" target="_blank">
+                                   <img class="img-fluid project-image" src="assets/images/projects/.project-featured.png" alt="project name" />
+                                    </a>-->
                                     <div class="ribbon">
                                         <div class="text">New</div>
                                     </div>
