--- a/index.html
+++ b/index.html
@@ -158,9 +158,9 @@
                                   <!--  <a href="https://themes.3rdwavemedia.com/bootstrap-templates/startup/velocity-bootstrap-theme-for-startup-products/" target="_blank">
                                    <img class="img-fluid project-image" src="assets/images/projects/.project-featured.png" alt="project name" />
                                     </a>-->
-                                    <div class="ribbon">
+                                  <!--  <div class="ribbon">
                                         <div class="text">New</div>
-                                    </div>
+                                    </div>-->
                                 </div>
                                     
                                 <div class="desc text-left">                                    
