--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                 </ul> 
             </div><!--//profile-->
 
-            <a class="btn btn-cta-primary float-right" href="MyCV.pdf" target="blank"><i class="fas fa-paper-plane"></i> Download CV</a>              
+            <a class="btn btn-cta-primary float-right" href="pranaycv.pdf" target="blank"><i class="fas fa-paper-plane"></i> Download CV</a>              
         </div><!--//container-->
      </header>
 
